[gd_scene load_steps=4 format=3 uid="uid://bnvdjymses3ns"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_m3kat"]
[ext_resource type="Theme" uid="uid://bh5uhv7nypu4m" path="res://assets/fonts/buttons.tres" id="3_uiw24"]
[ext_resource type="Texture2D" uid="uid://8267qhb74k6r" path="res://assets/IU/Moldura2-removebg.png" id="4_dql34"]

[node name="Options" type="Control"]
process_mode = 3
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3kat")

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 0
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -75.5
offset_right = 123.5
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.555897, 0.138198, 0.150374, 1)

[node name="VolSlider" type="HSlider" parent="."]
process_mode = 3
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -52.0
offset_right = 106.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
step = 0.01
value = 0.8

[node name="Volume" type="Label" parent="VolSlider"]
z_index = 5
layout_mode = 0
offset_left = -79.0
offset_top = -5.0
offset_right = -24.0
offset_bottom = 18.0
text = "Master
"

[node name="Fullscreen" type="CheckButton" parent="."]
process_mode = 3
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -19.0
offset_right = 35.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Fullscreen"

[node name="Back" type="Button" parent="."]
process_mode = 3
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 31.0
offset_right = 62.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_uiw24")
theme_override_font_sizes/font_size = 18
text = "RETURN"

[node name="ColorRect2" type="ColorRect" parent="."]
light_mask = 0
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0352941, 0.0352941, 0.0352941, 0.780392)

[node name="Moldura2-removebg" type="Sprite2D" parent="."]
process_mode = 4
z_index = 5
position = Vector2(636, 359)
scale = Vector2(0.455385, 0.38)
texture = ExtResource("4_dql34")

[connection signal="pressed" from="Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
